--- a/FeedTheSupremeLeader.cbp
+++ b/FeedTheSupremeLeader.cbp
@@ -13,6 +13,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add directory="include" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -22,6 +23,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -32,7 +34,9 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="include/MainWindow.hpp" />
 		<Unit filename="main.cpp" />
+		<Unit filename="src/MainWindow.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
