--- a/FeedTheSupremeLeader.cbp
+++ b/FeedTheSupremeLeader.cbp
@@ -8,9 +8,11 @@
 		<Build>
 			<Target title="Debug">
 				<Option output="bin/Debug/FeedTheSupremeLeader" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="bin/Debug" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option use_console_runner="0" />
 				<Compiler>
 					<Add option="-g" />
 					<Add directory="include" />
@@ -18,8 +20,9 @@
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/FeedTheSupremeLeader" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="bin/Release" />
 				<Option object_output="obj/Release/" />
-				<Option type="1" />
+				<Option type="0" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
@@ -32,8 +35,13 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
-			<Add option="-fexceptions" />
+			<Add option="-D_THREAD_SAFE" />
+			<Add directory="/opt/local/include/SDL2" />
 		</Compiler>
+		<Linker>
+			<Add library="SDL2" />
+			<Add directory="/opt/local/lib" />
+		</Linker>
 		<Unit filename="include/uiclass/MainWindow.hpp" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/uiclass/MainWindow.cpp" />
