--- a/FeedTheSupremeLeader.cbp
+++ b/FeedTheSupremeLeader.cbp
@@ -5,28 +5,28 @@
 		<Option title="FeedTheSupremeLeader" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
+		<Option virtualFolders="src\utilities\Poller\;" />
 		<Build>
 			<Target title="Debug">
 				<Option output="bin/Debug/FeedTheSupremeLeader" prefix_auto="1" extension_auto="1" />
-				<Option working_dir="bin/Debug" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option use_console_runner="0" />
 				<Compiler>
 					<Add option="-g" />
 					<Add directory="include" />
+					<Add directory="include/utilities/Poller" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/FeedTheSupremeLeader" prefix_auto="1" extension_auto="1" />
-				<Option working_dir="bin/Release" />
 				<Option object_output="obj/Release/" />
-				<Option type="0" />
+				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
 					<Add directory="include" />
+					<Add directory="include/utilities/Poller" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -35,18 +35,20 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
-			<Add option="-D_THREAD_SAFE" />
-			<Add directory="/opt/local/include/SDL2" />
+			<Add option="-fexceptions" />
 		</Compiler>
-		<Linker>
-			<Add library="SDL2" />
-			<Add directory="/opt/local/lib" />
-		</Linker>
 		<Unit filename="include/uiclass/MainWindow.hpp" />
 		<Unit filename="include/utilities/Poller/EventPoller.h" />
+		<Unit filename="include/utilities/Poller/Observer.h" />
+		<Unit filename="include/utilities/Poller/SDLPoller.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="src/Observer.cpp">
+			<Option virtualFolder="src/utilities/Poller/" />
+		</Unit>
 		<Unit filename="src/uiclass/MainWindow.cpp" />
 		<Unit filename="src/utilities/Poller/EventPoller.cpp" />
+		<Unit filename="src/utilities/Poller/Observer.cpp" />
+		<Unit filename="src/utilities/Poller/SDLPoller.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
