--- a/FeedTheSupremeLeader.cbp
+++ b/FeedTheSupremeLeader.cbp
@@ -10,19 +10,33 @@
 				<Option output="bin/Debug/FeedTheSupremeLeader" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="bin/Debug" />
 				<Option object_output="obj/Debug/" />
-				<Option type="0" />
+				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option use_console_runner="0" />
 				<Compiler>
+					<Add option="-Wall" />
+					<Add option="-pg" />
 					<Add option="-g" />
 					<Add directory="include" />
+					<Add directory="C:/Users/gfontana/Desktop/ETNA/SDL2-2.0.4/i686-w64-mingw32/include/SDL2" />
 				</Compiler>
+				<Linker>
+					<Add option="-pg -lgmon" />
+					<Add option="-lmingw32" />
+					<Add option="-lSDL2main" />
+					<Add library="C:/Users/gfontana/Desktop/ETNA/SDL2-2.0.4/i686-w64-mingw32/lib/libSDL2main.a" />
+					<Add library="C:/Users/gfontana/Desktop/ETNA/SDL2-2.0.4/i686-w64-mingw32/lib/libSDL2.dll.a" />
+					<Add directory="C:/Users/gfontana/Desktop/ETNA/SDL2-2.0.4/i686-w64-mingw32/lib" />
+					<Add directory="C:/Users/gfontana/Desktop/ETNA/FeedTheSupremeLeader/include" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/FeedTheSupremeLeader" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="bin/Release" />
 				<Option object_output="obj/Release/" />
-				<Option type="0" />
+				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option use_console_runner="0" />
 				<Compiler>
 					<Add option="-O2" />
 					<Add directory="include" />
