add school model texture, and a lot of features

--- a/model_viewer/Makefile
+++ b/model_viewer/Makefile
@@ -2,7 +2,9 @@ SRC =	main.cpp\
 		Shader.cpp\
 		Camera.cpp\
 		Model.cpp\
-		Scene.cpp
+		Scene.cpp\
+		Texture.cpp\
+		SDLTexture.cpp
 
 OBJ =	$(SRC:%.cpp=%.o)
 
