make file with shaders compilation

--- a/model_viewer2/Makefile
+++ b/model_viewer2/Makefile
@@ -16,31 +16,56 @@ SRC =	src/GEngine.cpp\
 		src/Device.cpp\
 		src/Window.cpp\
 		src/SwapChain.cpp\
+		src/ImageView.cpp\
 		main2.cpp
 
-OBJ =	$(SRC:%.cpp=%.o)
+VERT =	Shaders/2d_dummy.vert
 
+FRAG =	Shaders/2d_dummy.frag
+
+GLSLVCONF =	glslvalid.conf
+
+OBJ =		$(SRC:.cpp=.o)
+SPV_VERT =	$(VERT:.vert=.vert.spv)
+SPV_FRAG =	$(FRAG:.frag=.frag.spv)
 
 NAME =	modelviewer
 
 CXX = g++
-CXXFLAGS = -W -Wall -std=c++11 -Iinclude `pkg-config --cflags glfw3` -g
+GLSLVALIDATOR = glslangValidator
+CXXFLAGS = -W -Wall -std=c++11 -Iinclude `pkg-config --cflags glfw3`
 
 LDFLAGS = `pkg-config --libs glfw3` -lvulkan
 
 RM = rm -rf
 
-all:		$(NAME)
+
+
+all:		$(NAME) shaders
 
 $(NAME):	$(OBJ)
+			@echo $(SPV_VERT)
+			@echo $(SPV_FRAG)
 			$(CXX) $(OBJ) -o $(NAME) $(LDFLAGS)
+
+
+shaders:	$(SPV_VERT) $(SPV_FRAG)
+
+%.vert.spv:	%.vert
+			$(GLSLVALIDATOR) -V $< -o $@
+
+%.frag.spv:	%.frag
+			$(GLSLVALIDATOR) -V $< -o $@
+			
 
 clean:
 			$(RM) $(OBJ)
+			$(RM) $(SPV_VERT)
+			$(RM) $(SPV_FRAG)
 
 fclean:		clean
 			$(RM) $(NAME)
 
 re:			fclean all
 
-.PHONY: clean fclean re all
+.PHONY: clean fclean re all shaders
