move Logical device creation  to Engine

--- a/model_viewer2/Makefile
+++ b/model_viewer2/Makefile
@@ -23,6 +23,7 @@ SRC =	src/GEngine.cpp\
 		src/Framebuffers.cpp\
 		src/CommandBuffers.cpp\
 		src/Semaphore.cpp\
+		src/bitmaps/Bitmap.cpp\
 		main2.cpp
 
 VERT =	Shaders/2d_dummy.vert
