--- a/model_viewer2/Makefile
+++ b/model_viewer2/Makefile
@@ -30,7 +30,7 @@ SRC =	src/GEngine.cpp\
 		src/VertexBuffer.cpp\
 		src/events/KeyboardEvent.cpp\
 		src/events/KeyEvent.cpp\
-		src/events/MouseEvent.cpp\
+		src/events/MousePoller.cpp\
 		src/helper/EventHelper.cpp\
 		main2.cpp
 
