add vertex class

--- a/model_viewer2/Makefile
+++ b/model_viewer2/Makefile
@@ -34,6 +34,7 @@ SRC =	src/GEngine.cpp\
 		src/events/MouseEvent.cpp\
 		src/helper/EventHelper.cpp\
 		src/Camera.cpp\
+		src/models/Vertex.cpp\
 		main2.cpp
 
 VERT =	Shaders/2d_dummy.vert
