add model and vertex

--- a/model_viewer2/Makefile
+++ b/model_viewer2/Makefile
@@ -35,6 +35,7 @@ SRC =	src/GEngine.cpp\
 		src/helper/EventHelper.cpp\
 		src/Camera.cpp\
 		src/models/Vertex.cpp\
+		src/models/Model.cpp\
 		main2.cpp
 
 VERT =	Shaders/2d_dummy.vert
