create material class, PipelinePool instantiate the pipelines)

--- a/model_viewer2/Makefile
+++ b/model_viewer2/Makefile
@@ -36,6 +36,7 @@ SRC =	src/GEngine.cpp\
 		src/events/MousePoller.cpp\
 		src/events/MouseEvent.cpp\
 		src/helper/EventHelper.cpp\
+		src/models/Material.cpp\
 		src/Camera.cpp\
 		main2.cpp
 
