Finally, we have some fucking 3d

--- a/model_viewer2/Makefile
+++ b/model_viewer2/Makefile
@@ -19,6 +19,8 @@ SRC =	src/GEngine.cpp\
 		src/ImageView.cpp\
 		src/Shader.cpp\
 		src/Pipeline.cpp\
+		src/DescriptorPool.cpp\
+		src/DescriptorSet.cpp\
 		src/RenderPass.cpp\
 		src/buffers/Framebuffers.cpp\
 		src/buffers/CommandBuffers.cpp\
