rename main file

--- a/model_viewer2/Makefile
+++ b/model_viewer2/Makefile
@@ -51,7 +51,7 @@ SRC =	src/GEngine.cpp\
 		src/models/Vertex.cpp\
 		src/Camera.cpp\
 		src/Sampler.cpp\
-		main2.cpp
+		main.cpp
 
 VERT =	Shaders/2d_dummy.vert
 
